# Flugs

./: .gitignore  Cargo.toml  README.md  TODO.md  index.html  justfile
app-core/: Cargo.toml
app-core/src/: event.rs  lib.rs  storage.rs  string_error.rs
app-core/src/backend/: backend_link.rs  eventloop.rs  mod.rs
app-core/src/frontend/: mod.rs  ui_parameter.rs
bruker-parser/: Cargo.toml
bruker-parser/src/: lib.rs
csv-plotter-app/: Cargo.toml
csv-plotter-app/src/: backend_state.rs  egui.rs  lib.rs  main.rs  utils.rs
csv-plotter-app/src/app/: mod.rs  storage.rs
csv-plotter-app/src/app/components/: mod.rs
csv-plotter-app/src/app/components/file_handling/: logic.rs  mod.rs  ui.rs
csv-plotter-app/src/app/components/plotter/: logic.rs  mod.rs  ui.rs
csv-plotter-app/src/app/components/search/: logic.rs  mod.rs  ui.rs
csv-plotter-app/src/app/events/: mod.rs
csv-plotter-app/src/backend_state/: csv.rs  fuzzy_search.rs  mod.rs
csv-plotter-app/src/egui/: mod.rs
csv-plotter-app/src/egui/components/: search.rs
csv-plotter-app/src/file_handling/: logic.rs  mod.rs  ui.rs
csv-plotter-app/src/frontend_state/: file_handler.rs  mod.rs  search.rs
csv-plotter-app/src/gui/: mod.rs  storage.rs
csv-plotter-app/src/gui/components/: mod.rs
csv-plotter-app/src/gui/components/file_handling/: logic.rs  mod.rs  ui.rs
csv-plotter-app/src/gui/components/plotter/: mod.rs  ui.rs
csv-plotter-app/src/gui/components/search/: logic.rs  mod.rs  ui.rs
flugs/: Cargo.toml
flugs/src/: lib.rs  main.rs
flugs/src/app/: common.rs  config.rs  mod.rs  storage.rs
flugs/src/app/components/: mod.rs
flugs/src/app/components/file_handling/: logic.rs  mod.rs  ui.rs
flugs/src/app/components/plotter/: logic.rs  mod.rs  ui.rs
flugs/src/app/components/search/: logic.rs  mod.rs  ui.rs
flugs/src/app/events/: mod.rs
flugs/src/backend_state/: data.rs
src/: app.rs  lib.rs  main.rs
src/app/: linker.rs  mod.rs  ui_parameter.rs
src/backend/: backend_link.rs  command.rs  eventloop.rs  mod.rs  response.rs
src/counter_app/: backend_state.rs  mod.rs
src/csv_plotter_app/: backend_state.rs  mod.rs
src/frontend/: backend_link.rs  mod.rs  ui_parameter.rs
svg-export/: Cargo.toml  justfile
svg-export/src/: lib.rs  plotting.rs  svg.rs
svg_plotting/: Cargo.toml
svg_plotting/src/: plotting.rs  svg.rs
turbo-csv/: Cargo.toml  justfile
turbo-csv/src/: lib.rs
turbo-csv/test/: test_1.csv  test_2.csv
