[workspace]
resolver = "2"
members = [
  "app-core",
  "bruker-parser",
  "flugs",
  "svg_plotting",
  "turbo-csv",
]

default-members = ["app-core", "bruker-parser", "flugs", "turbo-csv", "svg_plotting"]

[workspace.dependencies]

app-core = { path = "app-core" }
bruker-parser = { path = "bruker-parser" }
svg_plotting = { path = "svg_plotting" }
turbo-csv = { path = "turbo-csv" }
