[workspace]
resolver = "2"
members = [
  "app-core",
  "bruker-parser",
  "flugs",
  "svg-export",
  "turbo-csv",
]

default-members = ["app-core", "bruker-parser", "flugs", "turbo-csv", "svg-export"]

[workspace.dependencies]

app-core = { path = "app-core" }
bruker-parser = { path = "bruker-parser" }
svg-export = { path = "svg-export" }
turbo-csv = { path = "turbo-csv" }
