[package]
name = "csv-plotter"
version = "0.1.0"
edition = "2021"

[dependencies]
app-core = { workspace = true}
bruker-parser = {workspace = true}
svg_plotting = { workspace = true}
turbo-csv = { workspace = true}
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence", 
    "wayland",
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }
env_logger = "0.11"
egui_plot = "0.30.0"
rfd = "0.15.2"
serde_json = "1.0.137"
derive-new = "0.7.0"
