[package]
name = "flugs"
version = "0.1.0"
edition = "2021"

[dependencies]
app-core = { workspace = true}
bruker-parser = {workspace = true}
svg-export = { workspace = true}
turbo-csv = { workspace = true}
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence", 
    "wayland",
] }
log = "0.4"

serde = { version = "1", features = ["derive"] }
env_logger = "0.11"
egui_plot = "0.33"
rfd = "0.15"
serde_json = "1.0"
derive-new = "0.7"
